Fine-tuning and lots of added documentation

--- a/de.nikostotz.xtendxcoremaven/build.properties
+++ b/de.nikostotz.xtendxcoremaven/build.properties
@@ -12,6 +12,7 @@ source.. = src/,\
            xtend-gen/
 src.excludes = workflow/
 output.. = bin/
+# These work the same as entries in MANIFEST.MF#Require-Bundle, but only at build time, not run-time
 additional.bundles = org.eclipse.emf.mwe2.launch,\
                      org.apache.log4j,\
                      org.apache.commons.logging,\
