--- a/de.nikostotz.xtendxcoremaven/pom.xml
+++ b/de.nikostotz.xtendxcoremaven/pom.xml
@@ -329,7 +329,7 @@
 					</sourceRoots>
 					<!-- This does not work currently, as we can see by the missing lambda 
 						in generated code for GreetingsHelper.compileAllGreetings(). It does work, 
-						however, for xtend-maven-plugin. -->
+						however, for xtend-maven-plugin. (see https://github.com/eclipse/xtext-maven/issues/11)-->
 					<javaSourceVersion>1.8</javaSourceVersion>
 				</configuration>
 				<dependencies>
